<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StatisticsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:textAlignment="center"
        />


    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/numberWon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_won"
        android:textSize="15pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/numberWon_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/numberLost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_lost"
        android:textSize="15pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/numberLost_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/mostLetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_popular_letter"
        android:textSize="15pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/mostLetter_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/leastLetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l_popular_letter"
        android:textSize="15pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/leastLetter_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/bestTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bestTime"
        android:textSize="15pt"
        />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/bestTime_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        />
</LinearLayout>